<resources>
    <string name="app_name">Layout-GridLayout</string>
    <string name="botaobarra">/</string>
    <string name="botaoasterisco">*</string>
    <string name="botaomenos">-</string>
    <string name="botaomais">+</string>
    <string name="botaotres">3</string>
    <string name="botaodois">2</string>
    <string name="botaoum">1</string>
    <string name="botaoseis">6</string>
    <string name="botaocinco">5</string>
    <string name="botaoquatro">4</string>
    <string name="botaonove">9</string>
    <string name="botaooito">8</string>
    <string name="botaosete">7</string>
    <string name="botaozerozero">00</string>
    <string name="botaozero">0</string>
    <string name="botaoigual">=</string>
</resources>

