<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.v7.widget.GridLayout
        android:layout_width="341dp"
        android:layout_height="469dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="30dp">

        <Button
            android:id="@+id/button1"
            android:layout_width="77dp"
            android:layout_height="81dp"
            android:text="@string/botaobarra"
            app:layout_column="3"
            app:layout_row="0" />

        <Button
            android:id="@+id/button2"
            android:layout_width="77dp"
            android:layout_height="81dp"
            android:text="@string/botaoasterisco"
            app:layout_column="3"
            app:layout_row="1" />

        <Button
            android:id="@+id/button3"
            android:layout_width="77dp"
            android:layout_height="81dp"
            android:text="@string/botaomenos"
            app:layout_column="3"
            app:layout_row="2" />

        <Button
            android:id="@+id/button4"
            android:layout_width="77dp"
            android:layout_height="240dp"
            android:text="@string/botaomais"
            app:layout_column="3"
            app:layout_row="3"
            app:layout_rowSpan="3" />

        <Button
            android:id="@+id/button5"
            android:layout_width="77dp"
            android:layout_height="81dp"
            android:text="@string/botaotres"
            app:layout_column="2"
            app:layout_row="1" />

        <Button
            android:id="@+id/button6"
            android:layout_width="77dp"
            android:layout_height="81dp"
            android:text="@string/botaodois"
            app:layout_column="1"
            app:layout_row="1" />

        <Button
            android:id="@+id/button7"
            android:layout_width="77dp"
            android:layout_height="81dp"
            android:text="@string/botaoum"
            app:layout_column="0"
            app:layout_row="1" />

        <Button
            android:id="@+id/button8"
            android:layout_width="77dp"
            android:layout_height="81dp"
            android:text="@string/botaoseis"
            app:layout_column="2"
            app:layout_row="2" />

        <Button
            android:id="@+id/button9"
            android:layout_width="77dp"
            android:layout_height="81dp"
            android:text="@string/botaocinco"
            app:layout_column="1"
            app:layout_row="2" />

        <Button
            android:id="@+id/button10"
            android:layout_width="77dp"
            android:layout_height="81dp"
            android:text="@string/botaoquatro"
            app:layout_column="0"
            app:layout_row="2" />

        <Button
            android:id="@+id/button11"
            android:layout_width="77dp"
            android:layout_height="81dp"
            android:text="@string/botaonove"
            app:layout_column="2"
            app:layout_row="3" />

        <Button
            android:id="@+id/button12"
            android:layout_width="77dp"
            android:layout_height="81dp"
            android:text="@string/botaooito"
            app:layout_column="1"
            app:layout_row="3" />

        <Button
            android:id="@+id/button13"
            android:layout_width="77dp"
            android:layout_height="81dp"
            android:text="@string/botaosete"
            app:layout_column="0"
            app:layout_row="3" />

        <Button
            android:id="@+id/button14"
            android:layout_width="77dp"
            android:layout_height="81dp"
            android:text="@string/botaozerozero"
            app:layout_column="2"
            app:layout_row="4" />

        <Button
            android:id="@+id/button15"
            android:layout_width="152dp"
            android:layout_height="81dp"
            android:text="@string/botaozero"
            app:layout_column="0"
            app:layout_columnSpan="2"
            app:layout_row="4"
            app:layout_rowSpan="3" />

        <Button
            android:id="@+id/button16"
            android:layout_width="230dp"
            android:layout_height="81dp"
            android:text="@string/botaoigual"
            app:layout_column="0"
            app:layout_columnSpan="3"
            app:layout_row="5" />

    </android.support.v7.widget.GridLayout>
</RelativeLayout>